security.tf

resource "aws_security_group" "bastion" {
  name        = "${var.project_name}-bastion-sg"
  description = "Security group for bastion host"
  vpc_id      = aws_vpc.main.id

  # Allow SSH only from your IP
  ingress {
    description = "SSH from my IP"
    from_port   = 22
    to_port     = 22
    protocol    = "tcp"
    cidr_blocks = ["${var.my_ip}/32"]
  }

  # Allow all outbound traffic
  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }

  tags = {
    Name         = "${var.project_name}-bastion-sg"
    project_name = var.project_name
  }
}

# Application Security Group (Private EC2)
# - Allows SSH only from Bastion SG
# - All outbound traffic allowed
resource "aws_security_group" "app" {
  name        = "${var.project_name}-app-sg"
  description = "Security group for private application instance"
  vpc_id      = aws_vpc.main.id

  # Allow SSH only from the bastion security group
  ingress {
    description     = "SSH from bastion host"
    from_port       = 22
    to_port         = 22
    protocol        = "tcp"
    security_groups = [aws_security_group.bastion.id]
  }

  # Allow all outbound traffic (for updates, outgoing calls, etc.)
  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }

  tags = {
    Name         = "${var.project_name}-app-sg"
    project_name = var.project_name
  }
}
